--- a/Question10.ipynb
+++ b/Question10.ipynb
@@ -46,14 +46,14 @@
     "\n",
     "df = pd.DataFrame(matrix, columns=[\"a\", \"b\", \"c\", \"d\", \"e\"]) # creating a dataframe\n",
     "\n",
-    "column_with_highest_std = df.std().idxmax() #column with highest std deviation\n",
+    "column_sd= df.std().idxmax() #column with highest std deviation\n",
     "\n",
-    "row_with_lowest_mean = df.mean(axis=1).idxmin() #row with lowest row\n",
+    "row_mean = df.mean(axis=1).idxmin() #row with lowest row\n",
     "\n",
     "print(\"DataFrame:\")\n",
     "print(df)\n",
-    "print(f\"\\nColumn with the highest standard deviation: {column_with_highest_std}\")\n",
-    "print(f\"Row with the lowest mean (index): {row_with_lowest_mean}\")\n"
+    "print(f\"\\nColumn with the highest standard deviation: {column_sd}\")\n",
+    "print(f\"Row with the lowest mean (index): {row_mean}\")\n"
    ]
   },
   {
